[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Samuel Ephraim <samibobo69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
pandas = "^1.5.2"
jupyter = "^1.0.0"
pyarrow = "^10.0.1"
tqdm = "^4.64.1"
plotly = "^5.11.0"
requests = "^2.28.1"
scikit-learn = "^1.2.0"
xgboost = "^1.7.2"
lightgbm = "^3.3.3"
optuna = "^3.0.5"
hopsworks = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
